--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$grey-7c: #7c7c7c;
+$dark-grey-333: #333;
+$light-grey-82: #828282;
+$mid-grey-4F: #4f4f4f;
+$green7a: #0c797a;
+$greyBD: #bdbdbd;
+$bgc-f2: #f2f2f2;
+$bgc-f7: #f7f7f7;
+$blue-grey: #0db2b3;
+$dark-green: #0c797a;
